Report able to generat and new ordering featur implementd

--- a/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
+++ b/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
@@ -6,12 +6,22 @@ Sign_up_xpath = //button[@type='submit']
 invalid_user_name_password_xpath = //div[.=' Invalid user Name or password! ']
 
 force_login_xpath = //a[.='Click here']/..
-force_login_linkTextclick_xpath = //a[.='Click here']
+force_login_linkTextclick_xpath = //a[.='Click heres']
 
-
+###start screen###
 opeing_cash_date_xpath = //input[@id='start_date']/..
 opeing_cahs_xpath = //input[@id='open_cash_val']/..
 opeing_cash_statrt_button_xpath = //button[.='START']
+
+###updated day end screen  ###
+actual_cash_text_xpath = //td[@id='actual_cash_data']//a
+enter_closing_cash_xapth = //input[@id='2000_val']
+update_button_xpath = //input[@id='update_amount']
+submit_logout_xpath = //button[.='Submit & Logout']
+
+### logout ####
+ck_dropudown_xpath = //a[@class='dropdown-toggle profile_ul_btn']
+hold_and_logout_xpath = //i[@class='fa fa-pause text-aqua']/..
 
 
 delivery_guy_contloing_xpath = //div[.=' Delivery Users Cannot Login... ']
