--- a/pom.xml
+++ b/pom.xml
@@ -10,26 +10,83 @@
   <name>chaikings</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
+<properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+        <scope>main</scope>
+      
+    </dependency>
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>2.4.0</version>
+</dependency>
+  
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-core</artifactId>
+    <version>2.4.0</version>
+</dependency>
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>2.4.0</version>
+</dependency>
+
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.14.0</version>
+</dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-server</artifactId>
+    <version>3.14.0</version>
+</dependency>
+
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-api</artifactId>
+    <version>3.14.0</version>
+</dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-htmlunit-driver</artifactId>
+    <version>2.52.0</version>
+</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-html -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-html</artifactId>
+    <version>0.2.7</version>
+</dependency>
+
+<dependency>
+			<groupId>com.codoid.products</groupId>
+			<artifactId>fillo</artifactId>
+			<version>1.18</version>
+		</dependency>
+ </dependencies>
   
   <build>
-    <pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                  
-                </configuration>
-            </plugin>
-            
-            <plugin>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
+         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.0</version>
@@ -39,100 +96,59 @@
        </includes>
            </configuration>
         </plugin>
-            <plugin>
-            <groupId>net.masterthought</groupId>
-            <artifactId>maven-cucumber-reporting</artifactId>
-            <version>2.8.0</version>
-            <executions>
-            <execution>
-            <id>execution</id>
-            <phase>verify</phase>
+        <plugin>
+        <groupId>net.masterthought</groupId>
+    <artifactId>maven-cucumber-reporting</artifactId>
+    <version>2.8.0</version>
+    <executions>
+     <execution>
+      <id>execution</id>
+      <phase>verify</phase>
+      <goals>
+       <goal>generate</goal>
+      </goals>
+      <configuration>
+       <projectname>AProject</projectname>
+       <outputDirectory>${project.build.directory}/Chaikings-cucumber-reports</outputDirectory>
+          <cucumberOutput>${project.build.directory}/cucumber-reports</cucumberOutput>
+      </configuration> 
+     </execution>
+    </executions>
+        </plugin>
+        
+        <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-surefire-plugin</artifactId>
+   <configuration>
+     <testFailureIgnore>true</testFailureIgnore>
+   </configuration>
+ </plugin>
+        
+            
+        <!-- <plugin>
+        
+    You need to add one attribute in pom.xml under surefire-plugin as <testFailureIgnore>true</testFailureIgnore>
+    <groupId>com.trivago.rta</groupId>
+    <artifactId>cluecumber-report-plugin</artifactId>
+    <version>1.0.0</version>
+    <executions>
+        <execution>
+            <id>report</id>
+            <phase>post-integration-test</phase>
             <goals>
-            <goal>generate</goal>
+                <goal>reporting</goal>
             </goals>
-            <configuration>
-            <projectname>zoebetaBDDF</projectname>
-            <outputDirectory>${project.build.directory}/anil-cucumber-reports</outputDirectory>
-            <cucumberOutput>${project.build.directory}/cucumber-reports</cucumberOutput>
-            </configuration>
-            </execution>
-            </executions>
-            </plugin>
-        </plugins>
-
-    </pluginManagement>
-</build>
-
-  <dependencies>
-  
-    <dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>1.2.5</version>
-		</dependency>
-
-<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-jvm-deps</artifactId>
-			<version>1.0.5</version>
-		</dependency>
-
-<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>gherkin</artifactId>
-			<version>2.12.2</version>
-		</dependency>
+        </execution>
+    </executions>
+    <configuration>
+        <sourceJsonReportDirectory>${project.build.directory}/cucumber-reports</sourceJsonReportDirectory>
+        <generatedHtmlReportDirectory>${project.build.directory}/sandy-cluecucumber-reports</generatedHtmlReportDirectory>
+    </configuration>    
+</plugin> -->
+        
+      </plugins>
     
-
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-jvm</artifactId>
-			<version>1.2.3</version>
-			<type>pom</type>
-		</dependency>
-
-		<dependency>
-    <groupId>info.cukes</groupId>
-    <artifactId>cucumber-junit</artifactId>
-    <version>1.2.2</version>
-</dependency>
-
-		
-		<dependency>
-			<groupId>net.masterthought</groupId>
-			<artifactId>cucumber-reporting</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-
-		
-		
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		
-<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>3.5.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-picocontainer</artifactId>
-			<version>1.2.5</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-		<groupId>com.codoid.products</groupId>
-		<artifactId>fillo</artifactId>
-		<version>1.18</version>		
-		</dependency>
-
-		
-  </dependencies>
+      </build>	
 </project>
+
+
