login page modifications

--- a/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
+++ b/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
@@ -6,7 +6,7 @@ Sign_up_xpath = //button[@type='submit']
 invalid_user_name_password_xpath = //div[.=' Invalid user Name or password! ']
 
 force_login_xpath = //a[.='Click here']/..
-force_login_linkTextclick_xpath = //a[.='Click heres']
+force_login_linkTextclick_xpath = //a[.='Click here']
 
 ###start screen###
 opeing_cash_date_xpath = //input[@id='start_date']/..
