--- a/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
+++ b/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
@@ -26,3 +26,22 @@ hold_and_logout_xpath = //i[@class='fa fa-pause text-aqua']/..
 
 delivery_guy_contloing_xpath = //div[.=' Delivery Users Cannot Login... ']
 
+### POS SCREEN ORDER ####
+Black_chai_product_xpath = //span[.='BLACK CHAI']
+honey_add_product_xpath = //div[@id='POS_ITEM_089-TA-']
+quntity_increase_xpath = //i[@class='ion ion-md-add']
+quntity_decrieas_xpath = //div[@class='icon up-caret-down']
+category_search_xpath = //input[@id='search_category']
+maggi_product_xpath = //span[.='MAGGI']
+maggi_add_xpath = //div[@id='POS_ITEM_061-TA-POS_SKU_001']
+cash_order_xpath = //li[.='Cash']
+order_confirm_xpath = //li[.=' Confirm ']
+order_view_xpath = //a[.='Orders']
+cash_order_amount_xpath = //div[@id='calciModal_total_order_value']
+cash_amount_enter_xpath =//input[@name='cash_given']
+save_order_xpath = //button[.='Save']
+
+
+
+
+
