ordering script is done

--- a/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
+++ b/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
@@ -40,6 +40,10 @@ order_view_xpath = //a[.='Orders']
 cash_order_amount_xpath = //div[@id='calciModal_total_order_value']
 cash_amount_enter_xpath =//input[@name='cash_given']
 save_order_xpath = //button[.='Save']
+print_bill_xpath = //a[.='Print Bill']
+print_later_xpath = //Button[.='Print Later']
+order_number_xpath = //h4[@class='conform-no']
+order_number_list_xpath = //h5[contains(.,'CKORD')]
 
 
 
