script changes of order placeing

--- a/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
+++ b/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
@@ -27,6 +27,15 @@ hold_and_logout_xpath = //i[@class='fa fa-pause text-aqua']/..
 delivery_guy_contloing_xpath = //div[.=' Delivery Users Cannot Login... ']
 
 ### POS SCREEN ORDER ####
+pos_takeAway_xpath = //a[.='Take Away']
+pos_delivery_xpath = //a[.='Delivery']
+pos_order_xpath = //a[@class='order_name order_view']
+pos_user_xpath = //button[@class='btn btn-link text-black font-weight-bold user_btn']
+order_takeWay_xpath = //label[contains(.,' Take Away')]
+order_delivery_xpath = //label[contains(.,'  Delivery')]
+order_goBilling_xpath = //a[@class='btn btn-success bill_btn']
+cart_productName_xpath=//img[@class='remove_cart']/../../..//td[@style='width: 35%;font-size: 13px;']
+
 Black_chai_product_xpath = //span[.='BLACK CHAI']
 honey_add_product_xpath = //div[@id='POS_ITEM_089-TA-']
 quntity_increase_xpath = //i[@class='ion ion-md-add']
