some minor changes

--- a/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
+++ b/src/main/java/com/chaikings/ApplicationProperties/applicationXpath.properties
@@ -41,8 +41,10 @@ honey_add_product_xpath = //div[@id='POS_ITEM_089-TA-']
 quntity_increase_xpath = //i[@class='ion ion-md-add']
 quntity_decrieas_xpath = //div[@class='icon up-caret-down']
 category_search_xpath = //input[@id='search_category']
-maggi_product_xpath = //span[.='MAGGI']
+
+maggi_product_xpath = //a[@title='MAGGI']/..
 maggi_add_xpath = //div[@id='POS_ITEM_061-TA-POS_SKU_001']
+
 cash_order_xpath = //li[.='Cash']
 order_confirm_xpath = //li[.=' Confirm ']
 order_view_xpath = //a[.='Orders']
@@ -51,7 +53,7 @@ cash_amount_enter_xpath =//input[@name='cash_given']
 save_order_xpath = //button[.='Save']
 print_bill_xpath = //a[.='Print Bill']
 print_later_xpath = //Button[.='Print Later']
-order_number_xpath = //h4[@class='conform-no']
+order_number_xpath = //div[@id='confirm_msg']//h4[@class='conform-no']
 order_number_list_xpath = //h5[contains(.,'CKORD')]
 
 
