--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 			<version>1.18</version>
 		</dependency>
 		
+		<dependency>
+    <groupId>org.apache.directory.studio</groupId>
+    <artifactId>org.apache.commons.io</artifactId>
+    <version>2.4</version>
+</dependency>
+
  </dependencies>
   
   <build>
@@ -124,6 +130,8 @@
      <testFailureIgnore>true</testFailureIgnore>
    </configuration>
  </plugin>
+        
+        
         
             
         <!-- <plugin>
