--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
     <version>2.4</version>
 </dependency>
 
+<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>4.0.6</version>
+		</dependency>
  </dependencies>
   
   <build>
