--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,15 @@
 			<artifactId>extentreports</artifactId>
 			<version>4.0.6</version>
 		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.18</version>
+</dependency>
+		
  </dependencies>
   
   <build>
